--- a/posts/2023/think-python.mdx
+++ b/posts/2023/think-python.mdx
@@ -225,7 +225,7 @@ def printall(*args):
 
 - persistence is when some data is kept in permanent storage
 - `os` module has functions for working with files and directories e.g. `os.cwd` gets the name of the current directory
-- sometimes errors happens when reading/writing files; handling an exception with a `try` statement is called ******\*\*\*\*******catching******\*\*\*\******* an exception
+- sometimes errors happens when reading/writing files; handling an exception with a `try` statement is called **catching** an exception
 - a database is a file that’s organized for storing data; python has a module called **dbm**
 - `pickle` module can translate any type of object into a string suitable for storage in a database
 
@@ -273,7 +273,7 @@ sketch(parrot, cage, dead=True)
 - pros of inheritance include code reuse; cons of inheritance are that it sometimes makes programs difficult to read
 - when objects in one class contain references to objects in another class; this relationship is called **HAS-A**
 - when one class might inherit from another; this relationship is called **IS-A**
-- these relationships can be shown in a ************\*\*************class diagram************\*\*************
+- these relationships can be shown in a **class diagram**
 - **data encapsulation** (aka data hiding) is the mechanism where implementation details of a class are hidden from a user
 
 ### 19 - the goodies
@@ -342,7 +342,7 @@ def is_anagram(w1, w2):
 
 - analysis of algorithms is a branch of CS that studies the performance of algorithms, especially their runtime and space requirements
 - relative performance might depend on details of the dataset; one way to avoid this is to analyze the worst-case scenario.
-- the **********\*\*\*\***********leading term**********\*\*\*\*********** is the term with the highest exponent
+- the **leading term** is the term with the highest exponent
 - in general we expect an algorithm with a smaller leading term to be a better algorithm for large problems, but for small problems, there may be a **crossover point**
 - an **order of growth** is a set of functions whose growth behavior is considered equivalent.
   - Some examples include O(1) constant, O(log n) (logarithmic for any base), O(n) linear, O(n log n) linearithmic, O(n^2) quadratic, O(n^3) cubic, O(c^n) exponential (for any c)
