--- a/posts/2024/r-ui.mdx
+++ b/posts/2024/r-ui.mdx
@@ -145,7 +145,7 @@ HSL vs HSB (brightness) (design)
 
 ### define shades up front
 
-<img src='/images//2024/palette.png' width='400' />
+<img src='/images/2024/palette.png' width='400' />
 
 yellow has higher perceived brightness than blue
 
