--- a/posts/2022/steal-laa.mdx
+++ b/posts/2022/steal-laa.mdx
@@ -11,7 +11,7 @@ Steal like an artist is a short book by Austin Kleon about being creative and be
 - Immature poets imitate; mature poets steal - T.S. Eliot
 - There is nothing new under the sun (Ecclesiastes 1:9)
 
-<img src='/images/2024/steal.png' class='w-48 rounded-xl shadow-lg' />
+<img src='/images/2024/steal.png' width='300' class='rounded-xl shadow-lg' />
 
 - the artist is a collector
 - save your thefts for later
