--- a/posts/2022/steal-laa.mdx
+++ b/posts/2022/steal-laa.mdx
@@ -3,7 +3,7 @@ title: 'Steal LAA 📔'
 date: '2022-08-16'
 ---
 
-Steal like an artist is a short book by Austin Kleon about being creative and being inspired by your favorite artists.
+Steal like an artist is a short book by [Austin Kleon](https://austinkleon.com/) about being creative and being inspired by your favorite artists.
 
 ### 1 steal LAA
 
