--- a/posts/2024/sotc.mdx
+++ b/posts/2024/sotc.mdx
@@ -12,7 +12,7 @@ For me, I collect watches.
 
 Why watches? Watches are portable, and also in [Singapore](https://www.nytimes.com/2023/07/23/fashion/singapore-watches-collectors.html) / SEA / [NYC](https://revolutionwatch.com/nyc-watch-guy-the-serious-watch-collector-who-doesnt-take-it-seriously-tcp/) , it can be a relatively popular hobby.
 
-### Collecting watches can be fun due for several reasons:
+### Collecting watches can be fun for several reasons:
 
 - aesthetics - they look pretty cool..
 
@@ -37,7 +37,7 @@ if you hold them long [enough](https://www.youtube.com/watch?v=arBJLV3P2bM).
 
 ### SOTC 2024
 
-My collection has been pretty stable so far comprising: Rolex Explorer 1 [114270](https://www.fratellowatches.com/exploring-evergreens-the-rolex-explorer-ref-114270/), & [Tudor Black Bay 58]() (for scuba diving 😂🤿). \* cool marketing (3)
+My collection has been pretty stable so far comprising: Rolex Explorer 1 [114270](https://www.fratellowatches.com/exploring-evergreens-the-rolex-explorer-ref-114270/), & [Tudor Black Bay 58](https://www.youtube.com/watch?v=Nmvuhrocbwg) (for scuba diving 😂🤿). \* cool marketing (3)
 
 <img src='/images/2024/sotc-bb58.png' width='350' class='rounded-xl' />
 
